# Farlands

./: .clang-format  .gitignore  CMakeLists.txt  README.md  roadmap.md  slice.py
.cache/clangd/index/: app.cpp.EC67375095BF808D.idx  app.h.81E85C2EE25A882B.idx  camera.cpp.77E6221BFF76FFC8.idx  camera.h.5B75632F0A9C88B4.idx  chunk.cpp.36EE067BC08B46D4.idx  chunk.h.DA0853E2B1D1AFBC.idx  cube.cpp.5469A48DFFB41A06.idx  cube.h.7C4F337ED73B1750.idx  main.cpp.C60A2162024F66DE.idx  renderer.cpp.C4529CF1C837FBF8.idx  renderer.h.906BF5F7DB02E761.idx
assets/data/: blocks.json
scripts/: build_atlas.py
seed/: a.out  main.c  main.py
shaders/: compile.sh  shader.frag  shader.vert  sky.frag  sky.vert
src/: app.cpp  app.h  blocktype.h  camera.cpp  camera.h  chunk.cpp  chunk.h  cube.cpp  cube.h  main.cpp  renderer.cpp  renderer.h
src/core/: logger.h  types.h
src/player/: player.cpp  player.h
src/renderer/: camera.cpp  camera.h  renderer.cpp  renderer.h  vk_buffers.cpp  vk_buffers.h  vk_context.cpp  vk_context.h  vk_pipeline.cpp  vk_pipeline.h  vk_swapchain.cpp  vk_swapchain.h  vk_texture.cpp  vk_texture.h
src/ui/: menu.cpp  menu.h
src/world/: biome.cpp  biome.h  block.cpp  block.h  chunk.cpp  chunk.h  chunk_mesh.cpp  chunk_mesh.h  chunk_serializer.cpp  chunk_serializer.h  noise.cpp  noise.h  world.cpp  world.h
